Rewrite Test Cases for Employee, Home, Product controllers and Services